Suggested Edits: prevent skeleton overflow
Bug: T295722

--- a/modules/homepage/suggestededits/ext.growthExperiments.Homepage.SuggestedEdits.less
+++ b/modules/homepage/suggestededits/ext.growthExperiments.Homepage.SuggestedEdits.less
@@ -585,7 +585,6 @@ body.mw-special-Homepage {
 						.loading-animation (1200ms);
 
 						&:before {
-							position: absolute;
 							width: 316px;
 							height: 16px;
 							clear: both;
